@@ -7,6 +7,7 @@
 %Document "* 500pt" / "500pt *" in -scale-to-fit / -center-to-fit
 %Document -progress
 %Document "annotated" range
+%Document PDF Portfolios
 %\DocumentMetadata{lang=en, pdfversion=2.0, pdfstandard=ua-2, pdfstandard=a-4f, testphase={phase-III, title, table, math, firstaid}}
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
