@@ -5,7 +5,7 @@ New features:
 o CCITT and CCITTG4 encoders in -process-images
 o Detect and remove JavaScript
 o Show progress on long files
-o Select only such pages as are annotated
+o Create PDF Portfolios
 
 Extended features:
 
@@ -13,6 +13,7 @@ o -thinlines can ensure maximum as well as minimum thickness
 o New -decompress-just-content for easier content stream debugging
 o -squeeze processes xobjects inside xobjects
 o Speed increases for -squeeze on huge files
+o Select only such pages as are annotated
 
 Fixes:
 
